# software-driven-rdm

./: .gitignore  Example.ipynb  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: e2e-tests.yml  publish.yml  test.yml  tests.yml  unit-tests.yml
Examples/Generation/: generate_api.sh
Examples/Generation/specifications/: biocatalyst.md
examples/basic/: BasicExample.ipynb  dataset.json  dataset.xml  dataset.yaml  model.md
sdRDM/: __init__.py  cli.py
sdRDM/base/: __init__.py  datamodel.py  graphql.py  importedmodules.py  importemodules.py  linker.py  listplus.py  referencecheck.py  tree.py  utils.py
sdRDM/base/datatypes/: __init__.py  equation.py  identifier.py  quantity.py  test_dm.md  test_quantity.ipynb  unit.py
sdRDM/config/: syntax_rules.toml
sdRDM/database/: __init__.py  utils.py
sdRDM/generator/: __init__.py  abstractparser.py  classrender.py  codegen.py  datatypes.py  enumrender.py  initrender.py  markdownparser.py  mermaid.py  mermaidclass.py  mermaidenum.py  mermaidexternal.py  schemagen.py  updater.py  utils.py
sdRDM/linking/: link.py  nodes.py  treeutils.py  utils.py
sdRDM/markdown/: __init__.py  enumutils.py  markdownparser.py  objectutils.py  smalltypes.py  tokenizer.py  tokens.py  utils.py
sdRDM/tools/: __init__.py  gitutils.py  harvester.py  utils.py  xmltools.py
sdRDM/validator/: __init__.py  checks.py  styler.py  tokennode.py  utils.py  validator.py
tests/: conftest.py
tests/end2end/: test_creation.py  test_datamodel.py  test_deseralisation.py  test_schemes.py  test_serialisation.py
(+56 files in other folders)
